<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/btm_nav_home" />

    <item
        android:id="@+id/navigation_your_goals"
        android:icon="@drawable/ic_target"
        android:enabled="true"
        android:title="@string/btm_nav_your_goal"/>

    <item
        android:id="@+id/navigation_goal_history"
        android:icon="@drawable/ic_history"
        android:enabled="true"
        android:title="@string/btm_nav_goal_history"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/btm_nav_profile" />

</menu>