<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addgoal.fragment.AddGoalBreakdownFragment">

    <!--  AppBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_bar_add_goal_title"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Header Text -->
    <TextView
        android:id="@+id/addGoal_breakdown_tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/goal_breakdown_header_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar" />

    <!-- Chosen Image -->
    <ImageView
        android:id="@+id/goal_breakdown_image_chosen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chosen_image_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGoal_breakdown_tv_header"
        tools:src="@drawable/money_background" />


    <!-- Goal Title -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/goal_breakdown_image_chosen"
        app:layout_constraintStart_toStartOf="@+id/goal_breakdown_image_chosen"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_image_chosen"
        tools:text="@string/goal_title_hint" />

    <!-- Goal Description -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/goal_breakdown_tv_goal_title"
        app:layout_constraintStart_toStartOf="@+id/goal_breakdown_tv_goal_title"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_title"
        tools:text="@string/goal_description_hint" />

    <!-- Label Amount -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_amount_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_description" />

    <!-- Item Price -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_goal_amount_label"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_description"
        tools:text="@string/goal_amount_hint" />

    <!-- Label Date Started -->
    <TextView
        android:id="@+id/goal_breakdown_tv_label_date_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_breakdown_date_started_label"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_goal_amount"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_description" />

    <!-- Date Started -->
    <TextView
        android:id="@+id/goal_breakdown_tv_date_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_label_date_started"
        app:layout_constraintTop_toTopOf="@+id/goal_breakdown_tv_label_date_started"
        tools:text="@string/goal_breakdown_date_started_text" />

    <!-- Label Daily Saving Amount -->
    <TextView
        android:id="@+id/goal_breakdown_tv_label_daily_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_breakdown_daily_saving_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_amount_label" />

    <!-- Daily Saving Amount -->
    <TextView
        android:id="@+id/goal_breakdown_tv_daily_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_label_daily_saving"
        app:layout_constraintTop_toTopOf="@+id/goal_breakdown_tv_label_daily_saving"
        tools:text="@string/goal_breakdown_daily_saving_text" />


    <!-- Label Goal Category -->
    <TextView
        android:id="@+id/goal_breakdown_tv_label_goal_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_category_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_label_daily_saving" />

    <!-- Goal Category -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_label_goal_category"
        app:layout_constraintTop_toTopOf="@+id/goal_breakdown_tv_label_goal_category"
        tools:text="@string/goal_category_hint" />

    <!-- Label Goal Period -->
    <TextView
        android:id="@+id/goal_breakdown_tv_label_goal_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_breakdown_period_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_breakdown_tv_goal_category" />

    <!-- Goal Category -->
    <TextView
        android:id="@+id/goal_breakdown_tv_goal_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_breakdown_tv_label_goal_period"
        app:layout_constraintTop_toTopOf="@+id/goal_breakdown_tv_label_goal_period"
        tools:text="@string/goal_breakdown_period" />

    <!-- Button Next Steps -->
    <TextView
        android:id="@+id/goal_breakdown_btn_start_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_button_primary"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/goal_breakdown_start_saving"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>